add fragment lifecycle tests